hard-gists/4245408/run.log
=== Docker Run Log for 4245408 ===
Started at: Mi 29. Okt 14:28:21 CET 2025

[2025-10-29 14:28:23] START: Running container for 4245408
[2025-10-29 14:28:24] SUCCESS: Container 8d80d661044f0f3488753d93b9bf6100f463dd59c978aaef22bee40df80b2692 started for 4245408
=== Container logs for 4245408 ===
  File "/snippet.py", line 114
    print '***ERROR INPUT OF INT TOO LONG'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4245408 ===
[2025-10-29 14:28:26] INFO: Container 8d80d661044f0f3488753d93b9bf6100f463dd59c978aaef22bee40df80b2692 has stopped
